--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON server for the Book Catalog project",
   "main": "index.js",
   "scripts": {
-    "server": "json-server --watch db.json --port 4000",
+    "start": "json-server --watch db.json --port 4000",
     "test": "echo \"No tests available\""
   },
   "repository": {
